# LawXpert

./: .env  README.md  app.py  category_model.pkl  db.py  legal_queries.csv  pyproject.toml  requirements.txt  start.sh  vectorizer.pkl
static/css/: styles.css
templates/: about.html  chat.html  community.html  connect_with_lawyer.html  dashboard.html  index.html  login.html  register.html
